--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "distinct": "parcel ./distinct-until-changed/index.html -d dev --open",
     "filter": "parcel ./filter/index.html -d dev --open",
     "from-event": "parcel ./from-event/index.html -d dev --open",
     "interval": "parcel ./interval/index.html -d dev --open"
