--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "distinct": "parcel ./distinct-until-changed/index.html -d dev --open",
     "filter": "parcel ./filter/index.html -d dev --open",
     "from-event": "parcel ./from-event/index.html -d dev --open",
-    "interval": "parcel ./interval/index.html -d dev --open"
+    "interval": "parcel ./interval/index.html -d dev --open",
+    "merge-map": "parcel ./merge-map/index.html -d dev --open"
   },
   "dependencies": {
     "rxjs": "^6.5.3"
