--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "from-event": "parcel ./from-event/index.html -d dev --open",
     "interval": "parcel ./interval/index.html -d dev --open",
     "merge-map": "parcel ./merge-map/index.html -d dev --open",
-    "switch-map": "parcel ./switch-map/index.html -d dev --open"
+    "switch-map": "parcel ./switch-map/index.html -d dev --open",
+    "take": "parcel ./merge-map/index.html -d dev --open"
   },
   "dependencies": {
     "rxjs": "^6.5.3"
