--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "distinct": "parcel ./distinct-until-changed/index.html -d dev --open",
     "filter": "parcel ./filter/index.html -d dev --open",
+    "from-array": "parcel ./from-array/index.html -d dev --open",
     "from-event": "parcel ./from-event/index.html -d dev --open",
     "interval": "parcel ./interval/index.html -d dev --open",
     "merge-map": "parcel ./merge-map/index.html -d dev --open",
